--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Lyrics Search</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <title>Lyrics Search</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <header>
-    <h1>Busca letras</h1>
+    <header>
+        <h1>Busca letras</h1>
 
-    <form id="form">
-      <input
-        id="search"
-        type="text"
-        placeholder="Insira o nome do artista ou da música..."
-      />
+        <form id="form">
+            <input autofocus value="Led Zeppelin" id="search" type="text"
+                placeholder="Insira o nome do artista ou da música..." />
 
-      <button>Buscar</button>
-    </form>
-  </header>
+            <button>Buscar</button>
+        </form>
+    </header>
 
-  <ul id="songs-container" class="songs-container songs"></ul>
+    <ul id="songs-container" class="songs-container songs"></ul>
 
-  <div id="prev-and-next-container" class="prev-and-next-container"></div>
+    <div id="prev-and-next-container" class="prev-and-next-container"></div>
 
-  <script src="./app.js"></script>
+    <script src="./app.js"></script>
 </body>
+
 </html>
