--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Busca letras</h1>
 
         <form id="form">
-            <input autofocus value="Led Zeppelin" id="search" type="text"
+            <input autofocus value="" id="search" type="text"
                 placeholder="Insira o nome do artista ou da música..." />
 
             <button>Buscar</button>
